# amocrm-gsheets-integration

./: .env.example  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: health.py  import_routes.py  webhook_amocrm.py  webhook_sheets.py
app/core/: amocrm_client.py  settings.py  sheets_client.py  sync_lock.py  utils.py
app/models/: webhook_row.py
app/services/: amocrm_service.py  import_service.py  sheets_service.py
scripts/: apps_script.js
tests/: test_utils.py
